Montagem do Layout e fragments

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- DEPENDECIAS THYMELEAF LAYOUT -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
