--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.open-in-view= true
 #habilita um filtro no spring que lazyexception
-#Consulta Lazy: 
+
+
+#THYMELEAF
+spring.thymeleaf.cache= false
